# dc26-badge

./: .gitignore  .gitmodules
firmware/DevBoard/GUI/: .gitignore  .gitmodules  CMakeLists.txt
firmware/DevBoard/GUI/include/: virtualHAL.h
firmware/DevBoard/GUI/src/: GuiMain.cpp  VirtualDisplayDevice.cpp  VirtualDisplayDevice.h
firmware/DevBoard/darknet-7/: .cproject  .mxproject  darknet-7.xml
firmware/DevBoard/darknet-7/Inc/: main.h
firmware/DevBoard/darknet-7/Src/: main.c
firmware/DevBoard/darknet-7/Src/darknet/: CMakeLists.txt  KeyStore.cpp  KeyStore.h  button_info.h  button_info_hw.cpp  common.h  contact.h  contact_store.cpp  contact_store.h  darknet7.cpp  darknet7.h  darknet7_main.cpp  init.cpp  init.h  mcu_to_mcu.cpp  mcu_to_mcu.h  my_info.h  settings_info.cpp  settings_info.h  virtual_key_board.cpp  virtual_key_board.h
firmware/DevBoard/darknet-7/Src/darknet/art/: dc_zia_96-sized.cpp  images.h  wetriffs.cpp
firmware/DevBoard/darknet-7/Src/darknet/menus/: AddressState.cpp  AddressState.h  GameOfLife.cpp  GameOfLife.h  SendMsgState.cpp  SendMsgState.h  badge_info_state.cpp  badge_info_state.h  communications_settings.cpp  communications_settings.h  darknet7_base_state.cpp  darknet7_base_state.h  gui_list_processor.cpp  gui_list_processor.h  health.cpp  health.h  mcu_info.cpp  mcu_info.h  menu3d.cpp  menu3d.h  menu_state.cpp  menu_state.h  pairing_state.cpp  pairing_state.h  sao_menu.cpp  sao_menu.h  scan.cpp  scan.h  setting_state.cpp  setting_state.h  tamagotchi.cpp  tamagotchi.h  test_state.cpp  test_state.h
firmware/common/fonts/: fonts.cpp  fonts.h
firmware/common/messaging/: mcu_message.cpp  mcu_message.h
firmware/esp-wroom-32/dc26-esp/: CMakeLists.txt  sdkconfig  sdkconfig.h
firmware/esp-wroom-32/dc26-esp/components/mkfatfs/src/idf/orig/esp32/include/: esp_err.h
firmware/esp-wroom-32/dc26-esp/components/mkfatfs/src/idf/orig/fatfs/src/: esp_vfs_fat.h
firmware/esp-wroom-32/dc26-esp/main/: CMakeLists.txt  command_handler.cpp  command_handler.h  command_queue.h  dc26.cpp  dc26.h  display_device.h  display_handler.cpp  display_handler.h  http_event_handler.cpp  mcu_to_mcu.cpp  mcu_to_mcu.h  npc_interact.cpp  npc_interact.h  task_handler.h
firmware/esp-wroom-32/dc26-esp/main/dc26_ble/: ble.cpp  ble.h
firmware/esp-wroom-32/dc26-esp/main/lib/: gui.cpp  gui.h  ssd1306.h
firmware/esp-wroom-32/dc26-esp/main/lib/ble/: BLE2904.h  BLEBeacon.h
